<resources>
    <string name="app_name">Parsetragram</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login">Login</string>
    <string name="instagram_logo">Instagram Logo</string>
    <string name="post">Post</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="description">Description</string>
    <string name="captured_image">Captured image</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="fail_registration">Sorry, this username is already taken!</string>
    <string name="success_registration">Great! Sign in above!</string>
    <string name="image">image</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="like_button">Like Button</string>
    <string name="comment_button">Comment Button</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="share">Share</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_photo_gallery">Open Photo Gallery</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="space_likes">\" likes\"</string>
</resources>