<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivLike"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/like_button"
            android:src="@drawable/ic_heart" />

        <ImageView
            android:id="@+id/ivComment"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/comment_button"
            android:src="@drawable/ic_comment" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvLikeCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        tools:text="Like Count" />

    <LinearLayout
        android:id="@+id/llDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDescriptionUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            tools:text="@string/prompt_username" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            tools:text="Description" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/colorTextSecondary"
        tools:text="timestamp" />
</LinearLayout>