<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <RelativeLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rlProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/profile"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvUpdateProfilePicture"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/cvProfile"
                android:layout_marginStart="-40dp"
                android:layout_marginTop="-40dp"
                android:layout_toEndOf="@id/cvProfile"
                android:backgroundTint="@color/colorAccentSecondary"
                android:visibility="gone"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:id="@+id/ivUpdateProfilePicture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/update_profile_picture"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_new_pfp" />

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <TextView
            android:id="@+id/tvLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:gravity="end"
            android:text="@string/log_out"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlProfileImage"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="username" />

    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llHeader">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPosts"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>